--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,6 @@
 
 
 /*------------------- General -------------------*/
-
 *,
 *::before,
 *::after {
@@ -57,7 +56,7 @@ img {
     max-width: 1158px;
     padding-right: 15px;
     padding-left: 15px;
-    margin: 0 auto
+    margin: 0 auto;
 }
 
 .section {
@@ -65,7 +64,7 @@ img {
     padding-bottom: 120px;
 }
 
-/*------------------- Header -------------------*/
+/*--------------- Header (Header section) ---------------*/
 .header {
     border-bottom: 1px solid #e7e9fc;
 }
@@ -159,9 +158,14 @@ img {
     color: var(--color-ocean-pressed-state);
 }
 
- /* ------------------- Hero ------------------- */
+ /*--------------- Hero (First section) ---------------*/
 
  .hero {
+    background-image: 
+        linear-gradient(to bottom, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+        url(../images/hero-img-people-office.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
     background-color: var(--color-dark-navyblue);
     padding: 188px 0;
  }
