--- a/css/style.css
+++ b/css/style.css
@@ -113,7 +113,9 @@ img {
 }
 
 .menu-item {
+    position: relative;
     padding: 24px 0;
+
 }
 
 .menu-link {
@@ -125,6 +127,17 @@ img {
     text-underline-position: from-font;
     text-decoration-skip-ink: none;
     color: var(--color-dark-navyblue);
+}
+
+.menu-link:hover::after {
+    content: "";
+    position: absolute;
+    bottom: -1px;
+    left: 0;
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    background: #404bbf;;
 }
 
 .menu-link:hover, .menu-link:focus {
@@ -164,8 +177,8 @@ img {
     background-image: 
         linear-gradient(to bottom, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
         url(../images/hero-img-people-office.jpg);
+    background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
     background-color: var(--color-dark-navyblue);
     padding: 188px 0;
  }
@@ -285,7 +298,6 @@ img {
 
 .ourteam-title {
     margin-bottom: 72px;
-
     font-weight: 700;
     font-size: 36px;
     line-height: 1.11;
@@ -305,6 +317,11 @@ img {
     flex-basis: calc((100% - 72px)/4);
     background-color: #FFFFFF;
     border-radius: 0px 0px 4px 4px;
+    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+}
+
+.ourteam-item:hover .social-link {
+    background-color: #404bbf;
 }
 
 .ourteam-label {
@@ -323,12 +340,59 @@ img {
 }
 
 .ourteam-position {
+    margin-bottom: 8px;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     text-align: center;
     color: var(--text-body);
 }
+
+/* ------------------- Social Icon ------------------- */
+.social-list {
+    display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: row;
+        gap: 24px;
+}
+
+.social-link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: var(--color-iris-primary-brand);
+}
+
+.social-icon {
+    fill: #f4f4fd;
+}
+
+.social-list .social-link:hover {
+    background-color: #31d0aa;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 /* ------------------- Portfolio ------------------- */
 
