--- a/css/style.css
+++ b/css/style.css
@@ -129,7 +129,7 @@ img {
     color: var(--color-dark-navyblue);
 }
 
-.menu-link:hover::after {
+.menu-link:hover::after, .menu-link:focus::after {
     content: "";
     position: absolute;
     bottom: -1px;
@@ -137,7 +137,7 @@ img {
     width: 100%;
     height: 4px;
     border-radius: 2px;
-    background: #404bbf;;
+    background: #404bbf;
 }
 
 .menu-link:hover, .menu-link:focus {
@@ -320,7 +320,8 @@ img {
     box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 
-.ourteam-item:hover .social-link {
+.ourteam-item:hover .social-link, 
+.ourteam-item:focus .social-link {
     background-color: #404bbf;
 }
 
@@ -371,27 +372,9 @@ img {
     fill: #f4f4fd;
 }
 
-.social-list .social-link:hover {
+.social-list .social-link:hover, .social-list .social-link:focus {
     background-color: #31d0aa;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 /* ------------------- Portfolio ------------------- */
@@ -423,14 +406,52 @@ img {
 .portfolio-item {
     width: calc((100% - 48px) / 3);
     background: #ffffff;
+
+    position: relative;
+    overflow: hidden;
     
 }
+
+.portfolio-overlay {
+    padding: 40px 32px 0 32px;
+
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #3f51b5;
+    
+    transform: translatey(100%);
+    transition: transform 250ms ease-in-out;
+}
+
+.portfolio-overlay-text {
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #f4f4fd;
+}
+
+.portfolio-item:hover .portfolio-overlay {
+    transform: translatey(0);
+    cursor: pointer;
+}
+
 
 .portfolio-label {
     padding: 32px 16px;
 
     border: 1px solid #e7e9fc;
     border-top: none;
+    background-color: #ffffff;
+
+    position: relative;
+    z-index: 1;
+}
+
+.portfolio-label:hover {
+    cursor: pointer;
 }
 
 .card-name {
@@ -455,6 +476,10 @@ img {
 .footer-section {
     padding: 100px 0;
     background: var(--color-dark-navyblue);
+}
+
+.footer-container {
+    display: flex;
 }
 
 .logo-footer {
@@ -486,4 +511,18 @@ img {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #f4f4fd;
+}
+
+.social-footer {
+    margin-left: 120px;
+}
+
+.social-footer-title {
+    margin-bottom: 16px;
+
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #ffffff;
 }
