--- a/css/style.css
+++ b/css/style.css
@@ -67,6 +67,7 @@ img {
 /*--------------- Header (Header section) ---------------*/
 .header {
     border-bottom: 1px solid #e7e9fc;
+    box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
 }
 
 .header-content {
@@ -114,22 +115,24 @@ img {
 
 .menu-item {
     position: relative;
-    padding: 24px 0;
-
 }
 
 .menu-link {
+    display: inline-block;
     padding: 24px 0;
     font-size: 16px;
     font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    text-underline-position: from-font;
-    text-decoration-skip-ink: none;
     color: var(--color-dark-navyblue);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.menu-link:hover::after, .menu-link:focus::after {
+.current {
+    color: var(--color-ocean-pressed-state);
+}
+
+.menu-link.current::after {
     content: "";
     position: absolute;
     bottom: -1px;
@@ -137,7 +140,7 @@ img {
     width: 100%;
     height: 4px;
     border-radius: 2px;
-    background: #404bbf;
+    background-color: #404bbf;
 }
 
 .menu-link:hover, .menu-link:focus {
@@ -154,7 +157,6 @@ img {
 .header-contact {
     display: flex;
     gap: 40px;
-    
 }
 
 .contact-link {
@@ -174,11 +176,13 @@ img {
  /*--------------- Hero (First section) ---------------*/
 
  .hero {
+    max-width: 1440px;
     background-image: 
         linear-gradient(to bottom, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
         url(../images/hero-img-people-office.jpg);
     background-position: center;
     background-repeat: no-repeat;
+    block-size: cover;
     background-color: var(--color-dark-navyblue);
     padding: 188px 0;
  }
@@ -192,7 +196,6 @@ img {
 
  .hero-title {
     max-width: 496px;
-
 
     font-size: 56px;
     font-weight: 700;
@@ -208,7 +211,6 @@ img {
     display: block;
     min-width: 169px;
     height: 56px;
-
     margin-top: 48px;
     padding: 16px 32px;
 
@@ -220,20 +222,20 @@ img {
     text-decoration-skip-ink: none;
 
     border-radius: 4px;
-    
     cursor: pointer;
     color: var(--color-background-white);
 
     border: none;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
     background: var(--color-iris-primary-brand);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
  }
 
  .hero-button:hover, .hero-button:focus {
     background: var(--color-ocean-pressed-state);
  }
 
-/* ------------------- Feature ------------------- */
+/* ----------------- Feature (Second section) ----------------- */
 
 .visually-hidden {
     position: absolute;
@@ -263,6 +265,9 @@ img {
     display: flex;
     justify-content: center;
     align-items: center;
+
+    height: 112px;
+
     border: 1px solid #8e8f99;
     border-radius: 4px;
     margin-bottom: 8px;
@@ -291,7 +296,7 @@ img {
     color: var(--color-contact-slate);
 }
 
-/* ------------------- Our Team ------------------- */
+/* ----------------- Our Team (Third section) ----------------- */
 .ourteam {
     background: #f4f4fd;
 }
@@ -321,7 +326,7 @@ img {
 }
 
 .ourteam-item:hover .social-link, 
-.ourteam-item:focus .social-link {
+.ourteam-item.social-link:focus {
     background-color: #404bbf;
 }
 
@@ -349,13 +354,13 @@ img {
     color: var(--text-body);
 }
 
-/* ------------------- Social Icon ------------------- */
+/* --------------------- Social Icon --------------------- */
 .social-list {
     display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: row;
-        gap: 24px;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    gap: 24px;
 }
 
 .social-link {
@@ -366,6 +371,7 @@ img {
     height: 40px;
     border-radius: 50%;
     background-color: var(--color-iris-primary-brand);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-icon {
@@ -377,7 +383,7 @@ img {
 }
 
 
-/* ------------------- Portfolio ------------------- */
+/* ----------------- Portfolio (Fourth section) ----------------- */
 
 .portfolio-content {
     display: flex;
@@ -407,33 +413,42 @@ img {
     width: calc((100% - 48px) / 3);
     background: #ffffff;
 
+   
+
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-item:hover {
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 
+                0px 1px 1px rgba(46, 47, 66, 0.16), 
+                0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
+
+.portfolio-card {
     position: relative;
     overflow: hidden;
-    
 }
 
 .portfolio-overlay {
-    padding: 40px 32px 0 32px;
+    padding: 40px 32px;
 
     position: absolute;
     top: 0;
-    left: 0;
     width: 100%;
     height: 100%;
-    background-color: #3f51b5;
-    
-    transform: translatey(100%);
-    transition: transform 250ms ease-in-out;
-}
+    background-color: #4d5ae5;
 
-.portfolio-overlay-text {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #f4f4fd;
+    
+    transform: translateY(100%);;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-item:hover .portfolio-overlay {
+.portfolio-card:hover .portfolio-overlay {
     transform: translatey(0);
     cursor: pointer;
 }
@@ -480,6 +495,12 @@ img {
 
 .footer-container {
     display: flex;
+    
+}
+
+.info-footer{
+    align-items: baseline;
+    margin-right: 120px;
 }
 
 .logo-footer {
@@ -513,10 +534,6 @@ img {
     color: #f4f4fd;
 }
 
-.social-footer {
-    margin-left: 120px;
-}
-
 .social-footer-title {
     margin-bottom: 16px;
 
@@ -525,4 +542,36 @@ img {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #ffffff;
+}
+
+.footer-social-item {
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-social-list {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    gap: 16px;
+}
+
+.footer-social-link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: var(--color-iris-primary-brand);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-social-icon {
+    fill: #f4f4fd;
+}
+
+.footer-social-list .footer-social-link:hover,
+.footer-social-list .footer-social-link:focus {
+    background-color: #31d0aa;
 }
