--- a/css/style.css
+++ b/css/style.css
@@ -113,11 +113,12 @@ img {
     gap: 40px;
 }
 
-.menu-item {
+/* .menu-item {
     position: relative;
-}
+} */
 
 .menu-link {
+    position: relative;
     display: inline-block;
     padding: 24px 0;
     font-size: 16px;
@@ -167,6 +168,7 @@ img {
     text-underline-position: from-font;
     text-decoration-skip-ink: none;
     color: var(--color-contact-slate);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contact-link:hover, .contact-link:focus  {
@@ -182,7 +184,7 @@ img {
         url(../images/hero-img-people-office.jpg);
     background-position: center;
     background-repeat: no-repeat;
-    block-size: cover;
+    background-size: cover;
     background-color: var(--color-dark-navyblue);
     padding: 188px 0;
  }
@@ -325,11 +327,6 @@ img {
     box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 
-.ourteam-item:hover .social-link, 
-.ourteam-item.social-link:focus {
-    background-color: #404bbf;
-}
-
 .ourteam-label {
     padding: 32px 0;
 }
@@ -378,8 +375,10 @@ img {
     fill: #f4f4fd;
 }
 
+
+
 .social-list .social-link:hover, .social-list .social-link:focus {
-    background-color: #31d0aa;
+    background-color: #404bbf;
 }
 
 
@@ -495,11 +494,12 @@ img {
 
 .footer-container {
     display: flex;
+    align-items: baseline;
     
 }
 
 .info-footer{
-    align-items: baseline;
+    
     margin-right: 120px;
 }
 
